--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,8 @@ jobs:
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         script: |
           # Stop and remove the existing container if it exists
-          docker stop my-nginx-container || true
-          docker rm my-nginx-container || true
+          #docker stop my-nginx-container || true
+          #docker rm my-nginx-container || true
 
           # Pull and run the Nginx container with the new image from ECR
           docker run -d --name my-nginx-container -p 80:80 $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
