--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,10 +43,8 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-2
+        envs: ECR_REGISTRY,ECR_REPOSITORY,IMAGE_TAG
         script: |
-          #sudo apt update
-          #sudo apt install docker.io -y
-          #sudo apt install awscli -y
           sudo $(aws ecr get-login --no-include-email --region us-east-2);
           # Stop and remove the existing container if it exists
           docker stop my-nginx-container || true
