--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,10 +40,7 @@ jobs:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_PRIVATE_KEY }}
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2
-        envs: ECR_REGISTRY,ECR_REPOSITORY,IMAGE_TAG
+        envs: ECR_REGISTRY,ECR_REPOSITORY,IMAGE_TAG,aws-access-key-id,aws-secret-access-key,aws-region
         script: |
           sudo $(aws ecr get-login --no-include-email --region us-east-2);
           # Stop and remove the existing container if it exists
