--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
             docker rm my-nginx-container || true
       
             # Pull and run the Nginx container with the new image from ECR
-            docker pull $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
-            docker run -d --name my-nginx-container -p 80:80 $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
+            docker pull 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
+            docker run -d --name my-nginx-container -p 80:80 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
 
       
