--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,10 +41,10 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            # Log in to Docker registry using password stdin
-            #echo "{{ secrets.AWS_ACCESS_KEY_ID }}" | docker login -u AWS --password-stdin $ECR_REGISTRY
+            
       
             # Stop and remove the existing container if it exists
+            sudo service docker start
             docker stop my-nginx-container || true
             docker rm my-nginx-container || true
       
