--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,8 @@ jobs:
       
             # Stop and remove the existing container if it exists
             sudo service docker start
+            sudo chmod 666 /var/run/docker.sock
+            aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 807775553447.dkr.ecr.us-east-2.amazonaws.com
             docker stop my-nginx-container || true
             docker rm my-nginx-container || true
       
