--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
             # Pull and run the Nginx container with the new image from ECR
             docker pull 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
             #docker run -d --name my-nginx-container -p 80:80 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
-            cd /home/ubuntu/docker/docker-compose.yml
+            cd /home/ubuntu/docker/
             docker-compose up -d
            
       
