--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,19 +41,18 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            
-      
             # Stop and remove the existing container if it exists
             sudo service docker start
             sudo chmod 666 /var/run/docker.sock
             aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 807775553447.dkr.ecr.us-east-2.amazonaws.com
             docker stop my-nginx-container || true
             docker rm my-nginx-container || true
-      
+
             # Pull and run the Nginx container with the new image from ECR
             docker pull 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
-            #docker run -d --name my-nginx-container -p 80:80 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
+
+            # Navigate to the directory containing your docker-compose.yml file
             cd /home/ubuntu/docker/
-            docker-compose up -d
-           
-      
+
+            # Start the Docker Compose service
+            IMAGE_NAME=807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }} docker-compose up -d
