--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,11 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: gitactions
-          IMAGE_TAG: ${{ github.sha }}
         run: |
           # Build the Docker image
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }} .
           # Push the image to Amazon ECR
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
 
       - name: Deploy to EC2 instance
         uses: appleboy/ssh-action@master
@@ -42,18 +41,19 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
+            
+      
             # Stop and remove the existing container if it exists
             sudo service docker start
             sudo chmod 666 /var/run/docker.sock
             aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 807775553447.dkr.ecr.us-east-2.amazonaws.com
             docker stop my-nginx-container || true
             docker rm my-nginx-container || true
-
+      
             # Pull and run the Nginx container with the new image from ECR
-            docker pull 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:$IMAGE_TAG
-
-            # Navigate to the directory containing your docker-compose.yml file
+            docker pull 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
+            #docker run -d --name my-nginx-container -p 80:80 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
             cd /home/ubuntu/docker/
-
-            # Start the Docker Compose service
             docker-compose up -d
+           
+      
