--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   nginx:
-    image: 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
+    image: ${IMAGE_NAME}
     ports:
       - "80:80"
     restart: always
