--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
             docker rm my-nginx-container || true
       
             # Pull the Nginx container with the new image from ECR
-            docker pull $IMAGE_NAME
+            #docker pull $IMAGE_NAME
             #cd /home/ubuntu/docker/  # No need to change directory
             docker-compose up -d
            
