--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,22 +28,25 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: gitactions
+          IMAGE_NAME: "807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}"
         run: |
           # Build the Docker image
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }} .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG} .
           # Push the image to Amazon ECR
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG} 
 
       - name: Deploy to EC2 instance
         uses: appleboy/ssh-action@master
+        env:
+          CUSTOM_IMAGE_NAME: "my-custom-image-name:${IMAGE_TAG}"
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          IMAGE_NAME: "807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}"
 
           script: |
             
+      
             # Stop and remove the existing container if it exists
             sudo service docker start
             sudo chmod 666 /var/run/docker.sock
@@ -51,9 +54,10 @@ jobs:
             docker stop my-nginx-container || true
             docker rm my-nginx-container || true
       
-            # Pull the Nginx container with the new image from ECR
-            #docker pull $IMAGE_NAME
-            cd /home/ubuntu/docker/  # No need to change directory
+            # Pull and run the Nginx container with the new image from ECR
+            docker pull $CUSTOM_IMAGE_NAME
+            #docker run -d --name my-nginx-container -p 80:80 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
+            cd /home/ubuntu/docker/
             docker-compose up -d
            
       
