--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,22 +28,18 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: gitactions
-          IMAGE_NAME: "807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}"
         run: |
           # Build the Docker image
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG} .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }} .
           # Push the image to Amazon ECR
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG} 
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
 
       - name: Deploy to EC2 instance
         uses: appleboy/ssh-action@master
-        env:
-          CUSTOM_IMAGE_NAME: "my-custom-image-name:${IMAGE_TAG}"
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-
           script: |
             
       
@@ -55,7 +51,7 @@ jobs:
             docker rm my-nginx-container || true
       
             # Pull and run the Nginx container with the new image from ECR
-            docker pull $CUSTOM_IMAGE_NAME
+            docker pull 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
             #docker run -d --name my-nginx-container -p 80:80 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${{ github.sha }}
             cd /home/ubuntu/docker/
             docker-compose up -d
