--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,16 @@ jobs:
           # Push the image to Amazon ECR
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
 
+      - name: send SHA to ec2 instance 
+        uses: appleboy/scp-action@v1
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
+          source: "${{ github.sha }}
+          target: /tmp/github_sha
+        
+
       - name: Deploy to EC2 instance
         uses: appleboy/ssh-action@master
         with:
@@ -41,19 +51,20 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            
-      
             # Stop and remove the existing container if it exists
             sudo service docker start
             sudo chmod 666 /var/run/docker.sock
             aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 807775553447.dkr.ecr.us-east-2.amazonaws.com
             docker stop my-nginx-container || true
             docker rm my-nginx-container || true
+            # Read the GitHub SHA from the file
+            GITHUB_SHA=$(cat /tmp/github_sha)
       
             # Pull and run the Nginx container with the new image from ECR
             #docker pull 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:{{ github.sha }}
             #docker run -d --name my-nginx-container -p 80:80 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:{{ github.sha }}
             cd /home/ubuntu/docker/
+            
             docker-compose up -d
            
       
