--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: "${{ github.sha }}
+          source: "${{ github.sha }}"
           target: /tmp/github_sha
         
 
@@ -64,7 +64,7 @@ jobs:
             #docker pull 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:{{ github.sha }}
             #docker run -d --name my-nginx-container -p 80:80 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:{{ github.sha }}
             cd /home/ubuntu/docker/
-            
+
             docker-compose up -d
            
       
