--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,8 @@ jobs:
             docker stop my-nginx-container || true
             docker rm my-nginx-container || true
             # Read the GitHub SHA from the file
+            cd /home/ubuntu/docker/
+            rm sha.txt
             GITHUB_SHA=$(cat /home/ubuntu/docker/sha.txt)
       
             # Pull and run the Nginx container with the new image from ECR
