--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 services:
   nginx:
-    image: ${IMAGE_NAME}
+    image: 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${GITHUB_SHA}
+    container_name: my-nginx-container
     ports:
       - "80:80"
-    restart: always
-    container_name: my-nginx-container
