--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
             # Stop and remove the existing container if it exists
             sudo service docker start
             sudo chmod 666 /var/run/docker.sock
-            aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 807775553447.dkr.ecr.us-east-2.amazonaws.com
+            aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin  ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-2.amazonaws.com
             docker stop my-nginx-container || true
             docker rm my-nginx-container || true
             # Read the GitHub SHA from the file
@@ -66,7 +66,7 @@ jobs:
       
             # Pull and run the Nginx container with the new image from ECR
             #docker pull 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${GITHUB_SHA}
-            #docker run -d --name my-nginx-container -p 80:80 807775553447.dkr.ecr.us-east-2.amazonaws.com/gitactions:${GITHUB_SHA}
+            #docker run -d --name my-nginx-container -p 80:80 ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-2.amazonaws.com/gitactions:${GITHUB_SHA}
             cd /home/ubuntu/docker/
 
             GITHUB_SHA=$GITHUB_SHA docker-compose up -d
